[gd_scene load_steps=9 format=3 uid="uid://b5c3lvsvhbean"]

[ext_resource type="Script" path="res://levels/win_condition.gd" id="1_p4enm"]
[ext_resource type="FontFile" uid="uid://cyncw15whrkih" path="res://art/Bubblegum.ttf" id="2_t6kc2"]
[ext_resource type="Texture2D" uid="uid://dldgbpnwa1mat" path="res://art/win menu.png" id="5_mli4l"]
[ext_resource type="Texture2D" uid="uid://bij4lyufxklkm" path="res://art/End level.png" id="5_s887k"]
[ext_resource type="Texture2D" uid="uid://ilpj2j7y16xr" path="res://art/win menu pressed.png" id="6_cav4f"]
[ext_resource type="Texture2D" uid="uid://cb5hjfydjqkjw" path="res://art/win menu hover.png" id="7_mw51o"]
[ext_resource type="AudioStream" uid="uid://1jk8pffbqqva" path="res://music/tunetank.com_menu-interface-selection.wav" id="7_o7xx7"]
[ext_resource type="AudioStream" uid="uid://dnshtpdu7shek" path="res://music/daneben-105534_[cut_1sec].wav" id="8_nwgxy"]

[node name="End_condition" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_p4enm")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -611.0
offset_top = -328.0
offset_right = 1450.0
offset_bottom = 752.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_s887k")
stretch_mode = 1

[node name="Total_Score" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -260.0
offset_top = -24.0
offset_right = 571.0
offset_bottom = 67.0
theme_override_fonts/normal_font = ExtResource("2_t6kc2")
theme_override_font_sizes/normal_font_size = 60

[node name="Tunetank_comMenu-interface-selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_o7xx7")
bus = &"sfx_menu"

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -213.0
offset_top = 66.0
offset_right = 1939.0
offset_bottom = 660.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("5_mli4l")
texture_pressed = ExtResource("6_cav4f")
texture_hover = ExtResource("7_mw51o")

[node name="Daneben-105534[cut1Sec]" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_nwgxy")

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
